Changes to addapt filter on mobile and desktop style (pending final fixes)

--- a/app/design/frontend/Vass/PU/Magento_Catalog/web/css/source/module/_toolbar.less
+++ b/app/design/frontend/Vass/PU/Magento_Catalog/web/css/source/module/_toolbar.less
@@ -46,6 +46,7 @@
     }
 
     .toolbar-products {
+        padding: 0 @indent__s;
         text-align: center;
         &:extend(.abs-add-clearfix all);
 
